# ER10-1

./: .clang-format  .gitignore  CMakeLists.txt  Ideas.md  README.md  cmake_generate_clang.bat
Asset/HUD/: Player.png~
Asset/Map/: Bug.erm  Floor0.erm  Floor1.erm  Floor2.erm  Floor3.erm  Ring - Copy (2).erm  Small - Copy (2).erm  Test2112024.erm  TestMap.erm
Asset/Shader/: HUD.frag  HUD.vert  Map.frag  Map.vert  PostProcess.frag  PostProcess.vert  Shared.glsl  Uber2D.frag  Uber2D.vert  Uber3D.frag  Uber3D.vert
Asset/TileSet/Hotel/: Source.blend  Source.blend1
Asset/Tileset/Hotel/: Source.blend1
Assets/: MonsterAtlas.psd
Assets/Shader/: HUD.frag  HUD.vert  Shared.glsl  Simple2D.frag  Simple2D.vert  Simple3D.frag  Simple3D.vert  Uber2D.frag  Uber2D.vert  Uber3D.frag  Uber3D.vert
Assets/Shaders/: HUD.frag  HUD.vert  Simple2D.frag  Simple2D.vert  Simple3D.frag  Simple3D.vert
Documentation/: Ideas.md
Source/: Asset.cxx  Asset.hxx  AssetDef.cxx  AssetTools.cxx  AssetTools.hxx  Audio.cxx  Audio.hxx  Battle.cxx  Battle.hxx  Blob.cxx  Blob.hxx  CommonTypes.hpp  CommonTypes.hxx  Constants.hpp  Constants.hxx  DevTools.cxx  DevTools.hxx  Draw.cpp  Draw.cxx  Draw.hpp  Draw.hxx  Editor.cxx  Editor.hxx  Game.cpp  Game.cxx  Game.hpp  Game.hxx  GameSystem.hxx  Level.cpp  Level.cxx  Level.hpp  Level.hxx  Log.hxx  Main.cpp  Main.cxx  Math.hxx  Memory.cxx  Memory.hxx  Platform.cxx  Platform.hxx  (+28 more)
